--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "rollup-plugin-copy": "^3.1.0",
+    "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-md": "0.0.7",
     "sirv-cli": "^0.4.4",
     "svelte-content-loader": "^1.1.2",
     "sveltestrap": "^3.1.1"
