--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "svelte-app",
-  "version": "1.0.0",
+  "name": "leja-cms",
+  "version": "0.0.1",
   "devDependencies": {
     "npm-run-all": "^4.1.5",
     "rollup": "^1.12.0",
@@ -20,7 +20,8 @@
     "rollup-plugin-md": "0.0.7",
     "sirv-cli": "^0.4.4",
     "svelte-content-loader": "^1.1.2",
-    "sveltestrap": "^3.1.1"
+    "sveltestrap": "^3.1.1",
+    "ws": "^7.2.0"
   },
   "scripts": {
     "build": "rollup -c",
