--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-svelte": "^5.0.3",
-    "rollup-plugin-terser": "^4.0.4",
+    "rollup-plugin-terser": "^5.1.3",
     "svelte": "^3.12.1"
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "navaid": "^1.0.5",
     "remarkable": "^2.0.0",
     "rollup-plugin-copy": "^3.1.0",
     "rollup-plugin-json": "^4.0.0",
