--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "sirv-cli": "^0.4.4",
     "svelte-content-loader": "^1.1.2",
     "sveltestrap": "^3.1.1",
-    "svero": "^1.0.0",
-    "ws": "^7.2.0"
+    "ws": "^7.2.0",
+    "yrv": "0.0.16"
   },
   "scripts": {
     "build": "rollup -c",
